syntax = "proto3";

message sdc
{
  string channelID = 2;
}